# vibootloader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: gcc-arm-none-eabi.cmake
main/: main.c
tests/main/: main.c
